tree-sitter-darklang/grammar.js
    source_file: $ =>
      seq(
        // all type and fn and value defs first
        repeat(choice($.module_decl, $.type_decl, $.fn_decl, $.val_decl)),

        // then the expressions to evaluate, in order
        optional($.expression),
      ),

    val_decl: $ =>
      seq(
        field("doc_comments", repeat($.doc_comment)),
        field("keyword_val", alias("val", $.keyword)),
        field("name", $.value_identifier),
        field("symbol_equals", alias("=", $.symbol)),
        field("value", $.simple_expression),
      ),

    // ---------------------
    // Function declarations
    // ---------------------
    bool_literal: $ => choice(/true/, /false/),

    //
    // Integers
    //CLEANUP: we are using .NET suffixes for integers (e.g. `1L` for Int64) temporarily until we remove the old parser.

    digits: $ => choice($.positive_digits, $.negative_digits),
    positive_digits: $ => /\d+/,

    int8_literal: $ =>
      seq(field("digits", $.digits), field("suffix", alias("y", $.symbol))),

    uint8_literal: $ =>
      seq(
        field("digits", $.positive_digits),
        field("suffix", alias("uy", $.symbol)),
      ),

    int16_literal: $ =>
      seq(field("digits", $.digits), field("suffix", alias("s", $.symbol))),

    uint16_literal: $ =>
      seq(
        field("digits", $.positive_digits),
        field("suffix", alias("us", $.symbol)),
      ),

    int32_literal: $ =>
      seq(field("digits", $.digits), field("suffix", alias("l", $.symbol))),

    uint32_literal: $ =>
      seq(
        field("digits", $.positive_digits),
        field("suffix", alias("ul", $.symbol)),
      ),

    int64_literal: $ =>
      seq(field("digits", $.digits), field("suffix", alias("L", $.symbol))),

    uint64_literal: $ =>
      seq(
        field("digits", $.positive_digits),
        field("suffix", alias("UL", $.symbol)),
      ),

    int128_literal: $ =>
      seq(field("digits", $.digits), field("suffix", alias("Q", $.symbol))),

    uint128_literal: $ =>
      seq(
        field("digits", $.positive_digits),
        field("suffix", alias("Z", $.symbol)),
      ),

    // The default, arbitrary-precision `Int` — a suffix-less integer literal.
    float_literal: $ => /[+-]?[0-9]+\.[0-9]+/,

    //
    // Characters
    char_literal: $ =>
      seq(
        field("symbol_open_single_quote", alias("'", $.symbol)),
        field("content", $.character),
        field("symbol_close_single_quote", alias("'", $.symbol)),
      ),
    character: $ =>
      choice(
        // higher precedence than escape sequences
        token.immediate("'"),
        token.immediate(prec(1, /[^'\\\n]/)),
        $.char_or_string_escape_sequence,
      ),

    //
    // Strings
    string_literal: $ =>
      choice(
        seq(
          field("symbol_open_quote", alias('"', $.symbol)),
          optional(field("content", $.string_content)),
          field("symbol_close_quote", alias('"', $.symbol)),
        ),
        // multiline strings
        seq(
          field("symbol_open_quote", alias('"""', $.symbol)),
          optional(field("content", $.multiline_string_content)),
          field("symbol_close_quote", alias('"""', $.symbol)),
        ),
      ),

    string_content: $ =>
      repeat1(
        choice(
          // higher precedence than escape sequences
          token.immediate(prec(1, /[^\\"\n]+/)),
          $.char_or_string_escape_sequence,
        ),
      ),

    qualified_type_name: $ =>
      prec(
        1,
        seq(
          seq(
            repeat(seq($.module_identifier, alias(".", $.symbol))),
            field("type_identifier", $.type_identifier),
          ),
          optional(field("type_args", $.type_args)),
        ),
      ),

    module_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    // e.g. `Person` in `type MyPerson = ...`
    type_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    // e.g. `newline` in `val newline = '\n'`
    value_identifier: $ => /[a-z_][a-zA-Z0-9_']*/,
    variable_identifier: $ => prec(PREC.VAR_IDENTIFIER, /[a-z_][a-zA-Z0-9_']*/),

    // e.g. `Dict { ``Content-Length`` } = "0"`
    enum_case_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    unit: $ => "()",
  },
});

// ---------------------
// Helper functions
// ---------------------

//
// List
function list_literal_base($, contentRule) {
  return seq(
    field("symbol_open_bracket", alias("[", $.symbol)),
    optional(field("content", contentRule)),
    field("symbol_close_bracket", alias("]", $.symbol)),
  );
}
function list_content_base($, content) {
  return choice(
    seq(
      content,
      repeat(seq(field("list_separator", alias(";", $.symbol)), content)),
      optional(alias(";", $.symbol)),
    ),
    seq(content, repeat(seq($.newline, content)), optional($.newline)),
    seq(
      $.indent,
      seq(content, repeat(seq($.newline, content)), optional($.newline)),
      $.dedent,
    ),
  );
}

//
// Tuple
function tuple_literal_base($, firstOrSecond, rest) {
  return seq(
    field("symbol_left_paren", alias("(", $.symbol)),
    field("first", firstOrSecond),
    field("symbol_comma", alias(",", $.symbol)),
    field("second", firstOrSecond),
    optional(field("rest", rest)),
    field("symbol_right_paren", alias(")", $.symbol)),
  );
}
function tuple_literal_the_rest_base($, rest) {
  return repeat1(
    seq(field("symbol_comma", alias(",", $.symbol)), field("expr", rest)),
  );
}

//
// Dict
function dict_literal_base($, contentRule) {
  return seq(
    field("keyword_dict", alias("Dict", $.keyword)),
    field("symbol_open_brace", alias("{", $.symbol)),
    optional(field("content", contentRule)),
    field("symbol_close_brace", alias("}", $.symbol)),
  );
}
function dict_content_base($, dict_pair) {
  return choice(
    seq(
      dict_pair,
      repeat(seq(field("dict_separator", alias(";", $.symbol)), dict_pair)),
    ),
    seq(dict_pair, repeat(seq($.newline, dict_pair)), optional($.newline)),
  );
}
function dict_pair_base($, value) {
  return seq(
    // CLEANUP this should allow for any string (i.e. `This`), without any backticks. may require alternative syntax.
    field("key", choice($.variable_identifier, $.double_backtick_identifier)),
    field("symbol_equals", alias("=", $.symbol)),
    field("value", value),
  );
}

//
// Enum
function enum_literal_base($, enum_fields) {
  return prec.right(
    seq(
      field("type_name", $.qualified_type_name),
      field("symbol_dot", alias(".", $.symbol)),
      field("case_name", $.enum_case_identifier),
      optional(
        choice(
          seq(
            field("symbol_open_paren", alias(token.immediate("("), $.symbol)),
            field("enum_fields", enum_fields),
            field("symbol_close_paren", alias(")", $.symbol)),
          ),
          field("enum_fields", enum_fields),
          seq($.indent, field("enum_fields", enum_fields), $.dedent),
        ),
      ),
    ),
  );
}
function enum_fields_base($, fields) {
  return prec.right(
    choice(
      fields,
      seq(
        fields,
        repeat(
          prec.right(seq(field("symbol_comma", alias(",", $.symbol)), fields)),
        ),
      ),
    ),
  );
}
//
// Record
function record_literal_base($, record_content) {
  return prec.right(
    choice(
      seq(
        field("type_name", $.qualified_type_name),
        field("symbol_open_brace", alias("{", $.symbol)),
        optional(field("content", record_content)),
        field("symbol_close_brace", alias("}", $.symbol)),
      ),
      seq(
        field("type_name", $.qualified_type_name),
        $.indent,
        field("symbol_open_brace", alias("{", $.symbol)),
        optional(field("content", record_content)),
        field("symbol_close_brace", alias("}", $.symbol)),
        $.dedent,
      ),
      seq(
        field("type_name", $.qualified_type_name),
        field("symbol_open_brace", alias("{", $.symbol)),
        $.indent,
        optional(field("content", record_content)),
        field("symbol_close_brace", alias("}", $.symbol)),
        $.dedent,
      ),
    ),
  );
}
function record_content_base($, record_pair) {
  return choice(
    seq(
      record_pair,
      repeat(seq(field("record_separator", alias(";", $.symbol)), record_pair)),
    ),
    seq(record_pair, repeat(seq($.newline, record_pair)), optional($.newline)),
  );
}
function record_pair_base($, value) {
  return seq(
    field("field", $.variable_identifier),
    field("symbol_equals", alias("=", $.symbol)),
    choice(
      field("value", value),
      seq($.indent, field("value", value), $.dedent),
    ),
  );
}
