tree-sitter-darklang/test/corpus/exhaustive/constant_decls.txt
==================
val declaration - int8
==================

val waterBoilingPointCelsius = 100y

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values (int8_literal (digits (positive_digits)) (symbol)))
  )
)


==================
val declaration - uint8
==================

val maxPlayers = 20uy

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values (uint8_literal (positive_digits) (symbol)))
  )
)


==================
val declaration - int16
==================

val maxSeatsInPlane = 800s

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values (int16_literal (digits (positive_digits)) (symbol)))
  )
)


==================
val declaration - uint16
==================

val maxDaysInAYear = 365us

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values (uint16_literal (positive_digits) (symbol)))
  )
)


==================
val declaration - int32
==================

val stadiumCapacity = 80000l

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values (int32_literal (digits (positive_digits)) (symbol)))
  )
)


==================
val declaration - uint32
==================

val marathonDistance = 42195ul

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values (uint32_literal (positive_digits) (symbol)))
  )
)


==================
val declaration - int64
==================

val secondsInAYear = 31536000L

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values (int64_literal (digits (positive_digits)) (symbol)))
  )
)


==================
val declaration - uint64
==================

val millisecondsInYear = 31536000000UL

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values (uint64_literal (positive_digits) (symbol)))
  )
)


==================
val declaration - int128
==================

val millisecondsInDay = 86400000Q

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values (int128_literal (digits (positive_digits)) (symbol)))
  )
)


==================
val declaration - uint128
==================

val millisecondsInCentury = 3155695200000Z

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values (uint128_literal (positive_digits) (symbol)))
  )
)


==================
val declaration - float
==================

val pi = 3.14159

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values (float_literal))
  )
)


==================
val declaration - string
==================

val message = "Hello, World!"

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values (string_literal (symbol) (string_content) (symbol)))
  )
)


==================
val declaration - char
==================

val letter = 'A'

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values (char_literal (symbol) (character) (symbol)))
  )
)


==================
val declaration - boolean
==================

val isTrue = true

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values (bool_literal))
  )
)


==================
val declaration - list
==================

val numbers = [1L; 2L; 3L]

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values
      (val_list_literal
        (symbol)
        (val_list_content
          (values (int64_literal (digits (positive_digits)) (symbol)))
          (symbol)
          (values (int64_literal (digits (positive_digits)) (symbol)))
          (symbol)
          (values (int64_literal (digits (positive_digits)) (symbol)))
        )
        (symbol)
      )
    )
  )
)


==================
val declaration - tuple
==================

val dimensionsOfRoom = (5L, 10L, 3L)

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values
      (val_tuple_literal
        (symbol)
        (values (int64_literal (digits (positive_digits)) (symbol)))
        (symbol)
        (values (int64_literal (digits (positive_digits)) (symbol)))
        (val_tuple_literal_the_rest
          (symbol)
          (values (int64_literal (digits (positive_digits)) (symbol)))
        )
        (symbol)
      )
    )
  )
)


==================
val declaration - dictionary
==================

val emptyDict = Dict{}

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values
      (val_dict_literal (keyword) (symbol) (symbol))
    )
  )
)


==================
val declaration - dictionary with key-value pairs
==================

val myDict = Dict{one = 1L; two = 2L}

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values
      (val_dict_literal
        (keyword)
        (symbol)
        (val_dict_content
          (val_dict_pair
            (variable_identifier)
            (symbol)
            (values (int64_literal (digits (positive_digits)) (symbol)))
          )
          (symbol)
          (val_dict_pair
            (variable_identifier)
            (symbol)
            (values (int64_literal (digits (positive_digits)) (symbol)))
          )
        )
        (symbol)
      )
    )
  )
)


==================
val declaration - enum
==================

val colorRed = Color.Red

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values
      (val_enum_literal
        (qualified_type_name (type_identifier))
        (symbol)
        (enum_case_identifier)
      )
    )
  )
)


==================
val declaration - enum with one field
==================

val someOne = Stdlib.Option.Option.Some 1L

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values
      (val_enum_literal
        (qualified_type_name (module_identifier) (symbol) (module_identifier) (symbol) (type_identifier))
        (symbol)
        (enum_case_identifier)
        (val_enum_fields (values (int64_literal (digits (positive_digits)) (symbol))))
      )
    )
  )
)


==================
val declaration - enum with multiple fields
==================

val myEnum = MyEnum.MyCase(1L, 2L)

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values
      (val_enum_literal
        (qualified_type_name (type_identifier)) (symbol) (enum_case_identifier)
        (symbol)
        (val_enum_fields
          (values (int64_literal (digits (positive_digits)) (symbol)))
          (symbol)
          (values (int64_literal (digits (positive_digits)) (symbol)))
        )
        (symbol)
      )
    )
  )
)


==================
val declaration - enum with tuple field
==================

val myEnum = MyEnum.MyCase((1L, 2L))

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values
      (val_enum_literal
        (qualified_type_name (type_identifier)) (symbol) (enum_case_identifier)
        (symbol)
        (val_enum_fields
          (values
            (val_tuple_literal
              (symbol)
              (values (int64_literal (digits (positive_digits)) (symbol)))
              (symbol)
              (values (int64_literal (digits (positive_digits)) (symbol)))
              (symbol)
            )
          )
        )
        (symbol)
      )
    )
  )
)


==================
val declaration - record
==================

val myPerson = Person { name = "Alice"; age = 30L }

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values
      (val_record_literal
        (qualified_type_name (type_identifier))
        (symbol)
        (val_record_content
          (val_record_pair
            (variable_identifier)
            (symbol)
            (values (string_literal (symbol) (string_content) (symbol)))
          )
          (symbol)
          (val_record_pair
            (variable_identifier)
            (symbol)
            (values (int64_literal (digits (positive_digits)) (symbol)))
          )
        )
        (symbol)
      )
    )
  )
)


==================
val declaration - qualified record
==================

val myPoint = Geometry.Point { x = 1.0; y = 2.0 }

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values
      (val_record_literal
        (qualified_type_name (module_identifier) (symbol) (type_identifier))
        (symbol)
        (val_record_content
          (val_record_pair
            (variable_identifier)
            (symbol)
            (values (float_literal))
          )
          (symbol)
          (val_record_pair
            (variable_identifier)
            (symbol)
            (values (float_literal))
          )
        )
        (symbol)
      )
    )
  )
)


==================
val declaration - unit
==================

val unitValue = ()

---

(source_file
  (val_decl
    (keyword)
    (value_identifier)
    (symbol)
    (values (unit))
  )
)




